--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ buildscript {
         classpath 'com.android.tools.build:gradle:3.0.1'
         classpath'me.tatarka:gradle-retrolambda:3.6.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.billy.android:cc-register:1.0.6'
         
 
         // NOTE: Do not place your application dependencies here; they belong
