--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
-apply plugin: 'com.android.application'
+ext.mainApp = true  //设置为true，表示此module为主app module，一直以application方式编译
+apply from: rootProject.file('cc-settings-2.gradle')
 
 android {
     compileSdkVersion rootProject.ext.android.compileSdkVersion
@@ -21,7 +22,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:27.1.1'
+    compile rootProject.ext.dependencies["appcompat-v7"]
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
