--- a/base_component/build.gradle
+++ b/base_component/build.gradle
@@ -72,7 +72,7 @@ dependencies {
     compile rootProject.ext.dependencies["okhttp"]
     compile rootProject.ext.dependencies["gson"]
     compile rootProject.ext.dependencies["glide"]
-    annotationProcessor rootProject.ext.dependencies["glide-compiler"]
+    kapt rootProject.ext.dependencies["glide-compiler"]
 
     //di
     compile rootProject.ext.dependencies["dagger"]
@@ -88,6 +88,8 @@ dependencies {
     compile rootProject.ext.dependencies["statusbarutil"]
     compile rootProject.ext.dependencies["kotlin"]
     compile rootProject.ext.dependencies["autosize"]
+    compile rootProject.ext.dependencies["logger"]
+    compile rootProject.ext.dependencies["cc"]
 
 }
 
