--- a/config.gradle
+++ b/config.gradle
@@ -63,6 +63,7 @@ ext {
             "fragmentation"             : "me.yokeyword:fragmentation:1.3.3",
             "crashreport"               : "com.tencent.bugly:crashreport_upgrade:1.3.4",
             "nativecrashreport"         : "com.tencent.bugly:nativecrashreport:latest.release",
+            "logger"                    : "com.orhanobut:logger:2.2.0",
 
             //canary
             "blockcanary-android"       : "com.github.moduth:blockcanary-android:${dependVersion.blockcanary}",
