分类点击获取列表

--- a/desk_newest_component/src/main/AndroidManifest.xml
+++ b/desk_newest_component/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <application>
         <activity android:name=".MainActivity" />
+        <activity android:name=".v.NewestActivity" />
     </application>
 
 </manifest>
