增加详情页组件化配置

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     addComponent 'desk_category_component'
     addComponent 'desk_newest_component'
     addComponent 'desk_my_component'
+    addComponent 'desk_detail_component'
 
 }
 
