--- a/desk_detail_component/src/main/AndroidManifest.xml
+++ b/desk_detail_component/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <application>
         <activity android:name=".MainActivity" />
-        <activity android:name=".DeskDetailActivity" />
+        <activity android:name=".v.DeskDetailActivity" />
     </application>
 
 </manifest>
