--- a/desk_detail_component/src/main/debug/AndroidManifest.xml
+++ b/desk_detail_component/src/main/debug/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".DeskDetailActivity">
+        <activity android:name=".v.DeskDetailActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
