--- a/desk_detail_component/src/main/debug/AndroidManifest.xml
+++ b/desk_detail_component/src/main/debug/AndroidManifest.xml
@@ -17,6 +17,9 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".v.AutoSizeDemo"
+            android:screenOrientation="landscape"/>
+
         <meta-data
             android:name="design_width_in_dp"
             android:value="360" />
