--- a/desk_detail_component/src/main/debug/AndroidManifest.xml
+++ b/desk_detail_component/src/main/debug/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.androiddesk.desk.detail.component">
 
     <application
+        android:name="debug.MyApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -17,8 +18,9 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".v.AutoSizeDemo"
-            android:screenOrientation="landscape"/>
+        <activity
+            android:name=".v.AutoSizeDemo"
+            android:screenOrientation="landscape" />
 
         <meta-data
             android:name="design_width_in_dp"
